Add Google version reading handler
Add a class to handle reading gBMC versions from /etc/os-release. This
file-based version source gets around the lack of complete release
information in the OpenBMC Phosphor or skeleton code.

Origin: 4684cf78e7708299f86b880f29328fe300e6700d
Signed-off-by: Xo Wang <xow@google.com>
Signed-off-by: Patrick Venture <venture@google.com>
Signed-Off-By: Jie Yang <jjy@google.com>
Change-Id: Ic0562289d2ceaf7c85d774d240cadaec2e9c09ba

--- a/Makefile.am
+++ b/Makefile.am
@@ -106,6 +106,7 @@ libipmi20_la_SOURCES = \
 	storageaddsel.cpp \
 	transporthandler.cpp \
 	globalhandler.cpp \
+	google_version.cpp \
 	groupext.cpp \
 	selutility.cpp \
 	ipmi_fru_info_area.cpp \
