Add a SecureBuffer class
SecureBuffer is like SecureString, but a specialization of
std::vector<uint8_t> that cleans up after itself

Tested: Executed various ipmi commands to see that they still work

Change-Id: Ifd255ef682d6e46d981de6a5a294d12f3666698b
Signed-off-by: Vernon Mauery <vernon.mauery@linux.intel.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -64,6 +64,7 @@ message_unittest_LDFLAGS = \
     -lsdbusplus \
     -lsystemd \
     -pthread \
+	$(CRYPTO_LIBS) \
     $(PHOSPHOR_LOGGING_LIBS) \
     $(OESDK_TESTCASE_FLAGS) \
     $(CODE_COVERAGE_LDFLAGS)
