Add multi-host support to handle IPMI restriction mode.
TESTED : Built Facebook YosemiteV2 images and loaded on
the target hardware. Verified restriction mode enabled
for all four hosts.

Signed-off-by: Kumar Thangavel <thangavel.k@hcl.com>
Change-Id: I3d338b6cd37a817653ca981c5322a77e60d3f992

--- a/Makefile.am
+++ b/Makefile.am
@@ -182,6 +182,7 @@ libdynamiccmds_la_CXXFLAGS = $(COMMON_CXX)
 endif
 
 if FEATURE_IPMI_WHITELIST
+NUM_HOSTS="$(INSTANCES)"
 libwhitelistdir = ${libdir}/ipmid-providers
 libwhitelist_LTLIBRARIES = libwhitelist.la
 libwhitelist_la_SOURCES = \
@@ -192,7 +193,8 @@ libwhitelist_la_LDFLAGS = \
 	$(PHOSPHOR_LOGGING_LIBS) \
 	$(PHOSPHOR_DBUS_INTERFACES_LIBS) \
 	-version-info 0:0:0 -shared
-libwhitelist_la_CXXFLAGS = $(COMMON_CXX)
+libwhitelist_la_CXXFLAGS = $(COMMON_CXX) \
+                           -Dhost_instances=\"$(NUM_HOSTS)\"
 nodist_libwhitelist_la_SOURCES = ipmiwhitelist.cpp
 endif
 
