dbus-sdr: support static FRU's ID configuration
Currently, dynamic sensor library generate FRU's ID via hashing
function, it makes the ID of FRU device can be changed is users replace
devices.
This commit add option to configure FRU's ID via BUS and ADDRESS of FRU
devices. User can enable dynamic-sensors-static-fru to configure static
FRU's ID in the fru_id.json file.
The format of fru_id.json as below:
[
  {
    "id" : 0,
    "busIdx" : 4,
    "addrIdx" : 80
  },
  {
    "id" : 1,
    "busIdx" : 14,
    "addrIdx" : 80
  }
]

Tested:
      1. Create fru_id.json file to indicate ID of FRU devices.
      2. Build and flash image to platform.
      3. Check the FRUs information via ipmitool.
         ipmitool fru print <fruId in fru_id.json>
      4. Information of FRU devices are displayed

Signed-off-by: Thang Tran <thuutran@amperecomputing.com>
Change-Id: Ie3eba6d2fd0a721ddd2c271658e72b4d54269cb0

--- a/configure.ac
+++ b/configure.ac
@@ -284,6 +284,26 @@ AS_IF([test x$dynamic_sensors = xtrue],
     AC_MSG_WARN([Disabling dynamic sensors feature])
 )
 
+# Configured static FRU's ID is disabled by default.
+# Change to true if you wish to configure static FRU's ID.
+AC_ARG_ENABLE([dynamic_sensors_static_fru],
+    [ --enable-dynamic_sensors_static_fru   Enable/disable Dynamic Sensors set static FRU's ID],
+    [case "${enableval}" in
+      yes) dynamic_sensors_static_fru=true ;;
+      no) dynamic_sensors_static_fru=false ;;
+      *) AC_MSG_ERROR([bad value ${enableval} for --enable-dynamic_sensors_static_fru]) ;;
+      esac],[dynamic_sensors_static_fru=false]
+      )
+
+AM_CONDITIONAL([FEATURE_DYNAMIC_STATIC_FRU_ID], [test x$dynamic_sensors_static_fru = xtrue])
+
+AS_IF([test x$dynamic_sensors_static_fru = xtrue],
+    AC_MSG_NOTICE([Enabling dynamic sensors set static FRU's ID])
+    [cpp_flags="$cpp_flags -DFEATURE_DYNAMIC_STATIC_FRU_ID"]
+    AC_SUBST([CPPFLAGS], [$cpp_flags]),
+    AC_MSG_WARN([Disabling dynamic sensors set static FRU's ID])
+)
+
 # hybrid sensors stack is disabled by default; offer a way to enable it
 AC_ARG_ENABLE([hybrid-sensors],
     [ --enable-hybrid-sensors   Enable/disable Hybrid Sensors stack],
