Migrate most of the whitelist to allowlist
Move the whitelist reference in the build and the ones that does not
depends on other repos to allow list for not.

Tested: Builds with no issue
Change-Id: I079c5cde55666ceed6d11d22594f575f6c1b8c26
Signed-off-by: Willy Tu <wltu@google.com>

--- a/meson.build
+++ b/meson.build
@@ -54,7 +54,7 @@ add_project_arguments(
 
 feature_map = {
   'boot-flag-safe-mode-support': '-DENABLE_BOOT_FLAG_SAFE_MODE_SUPPORT',
-  'i2c-whitelist-check'        : '-DENABLE_I2C_WHITELIST_CHECK',
+  'i2c-allowlist-check'        : '-DENABLE_I2C_ALLOWLIST_CHECK',
   'update-functional-on-fail'  : '-DUPDATE_FUNCTIONAL_ON_FAIL',
   'dynamic-sensors'            : '-DFEATURE_DYNAMIC_SENSORS',
   'dynamic-sensors-write'      : '-DFEATURE_DYNAMIC_SENSORS_WRITE',
@@ -110,17 +110,17 @@ if not get_option('softoff').disabled()
   subdir('softoff')
 endif
 
-# whitelist
-if not get_option('ipmi-whitelist').disabled()
-  generate_whitelist_script = files('generate_whitelist_create.sh')
+# allowlist
+if not get_option('ipmi-allowlist').disabled()
+  generate_allowlist_script = files('generate_allowlist_create.sh')
 
-  whitelist_conf = get_option('whitelist-conf')
-  ipmiwhitelist = run_command( \
+  allowlist_conf = get_option('allowlist-conf')
+  ipmiallowlist = run_command( \
     'bash', \
-    generate_whitelist_script, \
-    whitelist_conf)
+    generate_allowlist_script, \
+    allowlist_conf)
 
-  whitelist_pre = declare_dependency(
+  allowlist_pre = declare_dependency(
     include_directories: root_inc,
     dependencies: [
       channellayer_dep,
@@ -132,19 +132,19 @@ if not get_option('ipmi-whitelist').disabled()
     ],
   )
 
-  whitelist_lib = shared_module(
-    'whitelist',
-    'whitelist-filter.cpp',
-    'ipmiwhitelist.cpp',
+  allowlist_lib = shared_module(
+    'allowlist',
+    'allowlist-filter.cpp',
+    'ipmiallowlist.cpp',
     implicit_include_directories: false,
-    dependencies: whitelist_pre,
+    dependencies: allowlist_pre,
     install: true,
     install_dir: get_option('libdir') / 'ipmid-providers')
 endif
 
-whitelist_dep = declare_dependency(
-  link_with: whitelist_lib,
-  dependencies: whitelist_pre)
+allowlist_dep = declare_dependency(
+  link_with: allowlist_lib,
+  dependencies: allowlist_pre)
 
 # libsysintfcmds
 sysintfcmds_pre = declare_dependency(
