build: move all shared_library/module to library with version suffix
The version suffix will create `.so`, `.so.0`, and `.so.0.1` and will be
compatiable with existing bitbake setup for phosphor-ipmi-host.

Also moved the dbus-sdr library output the `dbus-sdr` folder since the
shared module depends on libipmi20, but it can't find it due to the it
being in a different folder. Moving it to the same meson file fixes that
issue.

Also removed all unused declare_dependency. Built fine without it.

Tested:
dbus-sdr works now
```
ipmitool sdr
cpu0             | disabled          | ns
cpu0_core0       | disabled          | ns
cpu0_core1       | disabled          | ns
cpu0_core2       | disabled          | ns
...
```

Change-Id: Ib13a79c1b27a7c122c5a29237716898cd2e29b4c
Signed-off-by: Willy Tu <wltu@google.com>

--- a/libipmid-host/meson.build
+++ b/libipmid-host/meson.build
@@ -2,15 +2,10 @@ ipmid_pre = [
   sdbusplus_dep,
 ]
 
-libipmid_host = library(
+library(
   'ipmid-host',
   dependencies: ipmid_pre,
   version: meson.project_version(),
   include_directories: root_inc,
   install: true,
   install_dir: get_option('libdir'))
-
-ipmid_host_dep = declare_dependency(
-  dependencies: ipmid_pre,
-  include_directories: root_inc,
-  link_with: libipmid_host)
