--- a/include/meson.build
+++ b/include/meson.build
@@ -16,21 +16,6 @@ install_subdir(
   strip_directory: false,
   exclude_files: '*.cpp')
 
-# Eventually we will split <ipmid/*> and <host-ipmid/*> headers
-# For now they will be the same during migration
-install_data(
-  'ipmid/iana.hpp',
-  'ipmid/api.h',
-  'ipmid/oemopenbmc.hpp',
-  'ipmid/oemrouter.hpp',
-  'ipmid-host/cmd.hpp',
-  'ipmid-host/cmd-utils.hpp',
-  install_dir: get_option('includedir') / 'host-ipmid',
-  rename: [
-    'iana.hpp',
-    'ipmid-api.h',
-    'oemopenbmc.hpp',
-    'oemrouter.hpp',
-    'ipmid-host-cmd.hpp',
-    'ipmid-host-cmd-utils.hpp',
-  ])
+# install the ipmid-host and ipmid includes
+install_subdir('ipmid-host', install_dir: get_option('includedir'))
+install_subdir('ipmid', install_dir: get_option('includedir'))
